Updated Person class to add Base64 encoding support for Java 6, 7 and 8. Earlier supported only Java8